Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19360

Address data race(s) seen in an engine_testapp's mock_server API: mock_get_current_time()

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      10:36:54 WARNING: ThreadSanitizer: data race (pid=83909)
      10:36:54   Write of size 4 at 0x0000014d5640 by thread T9:
      10:36:54     #0 mock_get_current_time /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/memcached/programs/engine_testapp/mock_server.c (engine_testapp+0x0000004ce90f)
      10:36:54     #1 ExecutorThread::run() /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/executorthread.cc:100 (ep.so+0x0000001e374c)
      10:36:54     #2 launch_executor_thread(void*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/executorthread.cc:34 (ep.so+0x0000001e2efa)
      10:36:54     #3 platform_thread_wrap /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/platform/src/cb_pthreads.c (libplatform.so.0.1.0+0x0000000036ac)
      10:36:54 
      10:36:54   Previous write of size 4 at 0x0000014d5640 by thread T8:
      10:36:54     #0 mock_get_current_time /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/memcached/programs/engine_testapp/mock_server.c (engine_testapp+0x0000004ce90f)
      10:36:54     #1 ExecutorThread::run() /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/executorthread.cc:100 (ep.so+0x0000001e374c)
      10:36:54     #2 launch_executor_thread(void*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/executorthread.cc:34 (ep.so+0x0000001e2efa)
      10:36:54     #3 platform_thread_wrap /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/platform/src/cb_pthreads.c (libplatform.so.0.1.0+0x0000000036ac)
      10:36:54 
      

      10:36:54 WARNING: ThreadSanitizer: data race (pid=83935)
      10:36:54   Write of size 4 at 0x0000014d5668 by main thread:
      10:36:54     #0 mock_time_travel <null> (engine_testapp+0x0000004cdf83)
      10:36:54     #1 test_memory_limit(engine_interface*, engine_interface_v1*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/tests/ep_testsuite.cc:2590 (ep_testsuite.so+0x000000023fd1)
      10:36:54     #2 execute_test /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/memcached/programs/engine_testapp/engine_testapp.c (engine_testapp+0x0000004c4e9f)
      10:36:54     #3 main crtstuff.c (engine_testapp+0x0000004c2e01)
      10:36:54 
      10:36:54   Previous read of size 4 at 0x0000014d5668 by thread T9:
      10:36:54     #0 mock_get_current_time /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/memcached/programs/engine_testapp/mock_server.c (engine_testapp+0x0000004ce8e8)
      10:36:54     #1 ExecutorThread::run() /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/executorthread.cc:100 (ep.so+0x0000001e374c)
      10:36:54     #2 launch_executor_thread(void*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/executorthread.cc:34 (ep.so+0x0000001e2efa)
      10:36:54     #3 platform_thread_wrap /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/platform/src/cb_pthreads.c (libplatform.so.0.1.0+0x0000000036ac)
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              abhinav Abhi Dangeti
              abhinav Abhi Dangeti
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  PagerDuty