MB-19360: [BP] Fix mock_time_travel data race

Fix race identified by ThreadSanitizer:

    WARNING: ThreadSanitizer: data race (pid=6808)
      Write of size 4 at 0x7ff2762e50b0 by thread T7:
        #0 mock_get_current_time /home/vagrant/couchbase-server/memcached/programs/engine_testapp/mock_server.c:142 (exe+0x0000000ad73a)
        #1 ExecutorThread::run() /home/vagrant/couchbase-server/ep-engine/src/executorthread.cc:101 (ep.so+0x000000215f3d)
        #2 launch_executor_thread(void*) /home/vagrant/couchbase-server/ep-engine/src/executorthread.cc:34 (ep.so+0x00000021560a)
        #3 platform_thread_wrap /home/vagrant/couchbase-server/platform/src/cb_pthreads.c:19 (libplatform.so.0.1.0+0x0000000033f4)

      Previous write of size 4 at 0x7ff2762e50b0 by thread T6:
        #0 mock_get_current_time /home/vagrant/couchbase-server/memcached/programs/engine_testapp/mock_server.c:142 (exe+0x0000000ad73a)
        #1 ExecutorThread::run() /home/vagrant/couchbase-server/ep-engine/src/executorthread.cc:101 (ep.so+0x000000215f3d)
        #2 launch_executor_thread(void*) /home/vagrant/couchbase-server/ep-engine/src/executorthread.cc:34 (ep.so+0x00000021560a)
        #3 platform_thread_wrap /home/vagrant/couchbase-server/platform/src/cb_pthreads.c:19 (libplatform.so.0.1.0+0x0000000033f4)

Change-Id: I392fd79245e690589f498690efe483ea856ef8d5
Reviewed-on: http://review.couchbase.org/43321
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Reviewed-on: http://review.couchbase.org/63320
Well-Formed: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>